httpserver/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudnative-httpserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloudnative-httpserver
  strategy:
    rollingUpdate:
      # 没有配置成默认的 25% 是因为避免在单节点场景下，只有1个实例时无法滚动更新。
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: cloudnative-httpserver
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8081"
    spec:
      containers:
        - name: httpserver
          image: 190219044/httpserver:2.1.0
          # imagePullPolicy: Always
          imagePullPolicy: IfNotPresent
          args:
            # 调整日志级别
            - -v=2  # TODO: 可以将日志级别等信息放入 configmap 在程序中再从读取
            - --logtostderr
          ports:
            - name: http
              containerPort: 8081
              protocol: TCP
          # 存活探针、就绪探针、启动探针
          livenessProbe:
            failureThreshold: 2
            httpGet:
              path: /healthz
              port: http
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 2
            httpGet:
              path: /healthz
              port: http
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          startupProbe:
            httpGet:
              path: /healthz
              port: http
              scheme: HTTP
            initialDelaySeconds: 1
            failureThreshold: 30
            successThreshold: 1
            periodSeconds: 10
            timeoutSeconds: 1
          # 模拟一个PreStop Hook
          lifecycle:
            preStop:
              exec:
                command: ["/bin/sh","-c","killall httpserver"]
          # 资源需求
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 50m
              memory: 64Mi
          volumeMounts:
            - mountPath: /etc/httpserver
              name: config
      dnsPolicy: ClusterFirst
      # 配置优雅终止的最长等待时间
      terminationGracePeriodSeconds: 60
      # 配置亲和性 保证多个pod不调度到同一个节点
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: "app"
                    operator: In
                    values:
                      - cloudnative-httpserver
              topologyKey: "kubernetes.io/hostname"
      volumes:
        # TODO: 可以在 initContainer 中下载配置文件到这个目录，程序从这里读配置文件。
        - emptyDir: {}
          name: config
---
# 配置nodeport的服务，便于自测。
apiVersion: v1
kind: Service
metadata:
  name: cloudnative-httpserver
  labels:
    app: cloudnative-httpserver
spec:
  type: NodePort
  externalTrafficPolicy: Cluster
  ports:
    - nodePort: 31081
      targetPort: 8081
      port: 8081
      protocol: TCP
      name: http
  selector:
    app: cloudnative-httpserver
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-httpserver
spec:
  tls:
  - hosts:
    -  foo.bar.com
    secretName: foo-ingress-tls
  rules:
  - host: "foo.bar.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: cloudnative-httpserver
            port:
              number: 8081
